Add links to example projects in intro content

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div><div>
                 <div>
                     <h2>Who uses ScratchX?</h2>
-                    <p><strong>Anyone</strong> can access and play with Experimental Extensions on ScratchX. Integrate Twitter feeds into your Scratch project, connect with hardware like Arduino and Raspberry Pi, and <a href="#extensions">much much more.</a></p>
+                    <p><strong>Anyone</strong> can access and play with Experimental Extensions on ScratchX. Integrate <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">Twitter</a> feeds into your Scratch project, connect with hardware like <a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js" data-action="load-url">Arduino</a> and <a href="?url=https://MrYsLab.github.io/xi4s.js" data-action="load-url">Raspberry Pi</a>, and <a href="#extensions">much much more.</a></p>
 
                     <p><strong>Developers</strong> can use ScratchX to create and test new Experimental Extensions. Learn more about ScratchX in our <a href="https://github.com/LLK/scratchx/wiki/">developer documentation</a></p>
                 </div>
