Update Sound Synthesizer information

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <img src="images/extensions/tonesynth_small.png" />
                     </a>
                     <section>
-                        <h2>Tone Synth</h2>
+                        <h2>Sound Synthesizer</h2>
                         <p class="author">Eric Rosenbaum</p>
                     </section>
                 </li>
@@ -235,6 +235,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/tone-synth.js" data-action="load-url">
+                            <header>
+                                <h2>Sound Synthesizer</h2>
+                                <p class="author">Eric Rosenbaum</p>
+                            </header>
+                            <img src="images/extensions/tonesynth_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Synthesize sound effects and music</p>
+                            <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Bouncing%20Synth%20Ball.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://ericrosenbaum.github.io/tone-synth-extension">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://sayamindu.github.io/scratch-extensions/text_to_speech_extension.js" data-action="load-url">
                             <header>
                                 <h2>Text to Speech</h2>
@@ -246,23 +263,6 @@
                             <p>Use Scratch to read text out loud</p>
                             <a href="?url=http://sayamindu.github.io/scratch-extensions/text-to-speech/TalkingGobo.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://sayamindu.github.io/scratch-extensions/text-to-speech">Documentation</a>
-                        </section>
-                        <section class="tags">
-                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
-                        </section>
-                    </li>
-                    <li>
-                        <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/tone-synth.js" data-action="load-url">
-                            <header>
-                                <h2>Tone Synth</h2>
-                                <p class="author">Eric Rosenbaum</p>
-                            </header>
-                            <img src="images/extensions/tonesynth_small.png" />
-                        </a>
-                        <section class="description">
-                            <p>Code your own funky electronic music</p>
-                            <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Bouncing%20Synth%20Ball.sbx" data-action="load-url">Sample Project</a>
-                            <a href="http://ericrosenbaum.github.io/tone-synth-extension">Documentation</a>
                         </section>
                         <section class="tags">
                             <span class="tag web" title="Web Extension">Requires Internet Connection</span>
