--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js" data-action="load-url">
+                    <a href="?url=http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20a%20LED.sbx" data-action="load-url">
                         <img src="images/extensions/arduino_small.png" />
                         <section>
                             <h2>Arduino</h2>
