Fix Sample Project urls

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </a>
                         <section class="description">
                             <p>Hand Gestures, face tracking, voice commands</p>
-                            <a href="http://intel-realsense-extension-for-scratch.github.io/public/extension/samples/simplest-realsense-blocks.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://intel-realsense-extension-for-scratch.github.io/public/extension/samples/simplest-realsense-blocks.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://intel-realsense-extension-for-scratch.github.io/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -193,7 +193,7 @@
                         </a>
                         <section class="description">
                             <p>International Space Station tracker</p>
-                            <a href="http://khanning.github.io/scratch-isstracker-extension/examples/ISS%20Tracker.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://khanning.github.io/scratch-isstracker-extension/examples/ISS%20Tracker.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-isstracker-extension/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -210,7 +210,7 @@
                         </a>
                         <section class="description">
                             <p>Hand and finger tracking</p>
-                            <a href="http://khanning.github.io/scratch-leapmotion-extension/examples/Leap%20Motion%20Example%20-%20Hand%20Skeleton.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://khanning.github.io/scratch-leapmotion-extension/examples/Leap%20Motion%20Example%20-%20Hand%20Skeleton.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-leapmotion-extension/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -227,7 +227,7 @@
                         </a>
                         <section class="description">
                             <p>Control littleBits creations</p>
-                            <a href="http://khanning.github.io/scratch-littlebits-extension/examples/littleBits%20-%20Move%20with%20Dimmer.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://khanning.github.io/scratch-littlebits-extension/examples/littleBits%20-%20Move%20with%20Dimmer.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-littlebits-extension/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -295,7 +295,7 @@
                         </a>
                         <section class="description">
                             <p>Control for Arduino, <acronym title="Raspberry Pi">RPi</acronym> and <acronym title="BeagleBone Black">BBB</acronym></p>
-                            <a href="https://github.com/MrYsLab/xi/blob/master/clients/scratch/projects/blink.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=https://github.com/MrYsLab/xi/blob/master/clients/scratch/projects/blink.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://github.com/MrYsLab/xi" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
