--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20a%20LED.sbx" data-action="load-url">
+                    <a href="?url=http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20an%20LED.sbx" data-action="load-url">
                         <img src="images/extensions/arduino_small.png" />
                         <section>
                             <h2>Arduino</h2>
@@ -142,7 +142,7 @@
                         </a>
                         <section class="description">
                             <p>Control Arduino boards</p>
-                            <a href="?url=http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20a%20LED.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20an%20LED.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-arduino-extension/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
