Fix Twitter sample project URL

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <ul class="featured-extensions">
                 <li class="featured-extension">
-                    <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">
+                    <a href="?url=http://technoboy10.tk/twitter/examples/Fetch%20a%20Tweet.sbx" data-action="load-url">
                         <img src="images/extensions/twitter_small.png" />
                         <section>
                             <h2>Twitter</h2>
@@ -278,7 +278,7 @@
                         </a>
                         <section class="description">
                             <p>Use Twitter in your projects!</p>
-                            <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://technoboy10.tk/twitter/examples/Fetch%20a%20Tweet.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://technoboy10.tk/twitter/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
