--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         </a>
                         <section class="description">
                             <p>Control for Arduino, <acronym title="Raspberry Pi">RPi</acronym> and <acronym title="BeagleBone Black">BBB</acronym></p>
-                            <a href="?url=https://github.com/MrYsLab/xi/blob/master/clients/scratch/projects/blink.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://scratchx.org/tmp/xi.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://github.com/MrYsLab/xi" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
