Temporarily host Text to Speech sample project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=http://sayamindu.github.io/scratch-extensions/text-to-speech/TalkingGobo.sbx" data-action="load-url">
+                    <a href="?url=http://scratchx.org/tmp/TalkingGobo.sbx" data-action="load-url">
                         <img src="images/extensions/texttospeech_small.png" />
                         <section>
                             <h2>Text to Speech</h2>
@@ -261,7 +261,7 @@
                         </a>
                         <section class="description">
                             <p>Use Scratch to read text out loud</p>
-                            <a href="?url=http://sayamindu.github.io/scratch-extensions/text-to-speech/TalkingGobo.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://scratchx.org/tmp/TalkingGobo.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://sayamindu.github.io/scratch-extensions/text-to-speech" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
