--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <img src="images/extensions/twitter-extension-sm.png" />
                         <section>
                             <h2>Twitter</h2>
-                            <p class="author">Connor Hudson and Kreg Hanning</p>
+                            <p class="author">Connor Hudson, Kreg Hanning</p>
                         </section>
                     </a>
                 </li>
