Add Roamer extension to library page
Extension for Valiant Technology Ltd.'s Roamer robot turtle.

--- a/index.html
+++ b/index.html
@@ -235,6 +235,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=http://roamereducationalrobot.github.io/RoamerScratchX/roamer.js" data-action="load-url">
+                            <header>
+                                <h2>Roamer</h2>
+                                <p class="author">Kevin Rands, Dave Ewins, Dave Catlin</p>
+                            </header>
+                            <img src="images/extensions/roamer_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Programming Roamer&reg; with ScratchX</p>
+                            <a href="?url=http://roamereducationalrobot.github.io/RoamerScratchX/The%20Scarlet%20Pumpernickel.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://training.roamer-educational-robot.com/course/view.php?id=55">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/tone-synth.js" data-action="load-url">
                             <header>
                                 <h2>Sound Synthesizer</h2>
