Update RealSense authors
Intel has requested an update to the list of authors for their RealSense extension.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <a href="?url=http://intel-realsense-extension-for-scratch.github.io/public/extension/intel_realsense_extension.js" data-action="load-url">
                             <header>
                                 <h2>Intel&reg; RealSense&trade;</h2>
-                                <p class="author">Shachar Oz, Yaron Yanai, Avi Salmon</p>
+                                <p class="author">Shachar Oz, Yaron Yanai, Yotam Salmon</p>
                             </header>
                             <img src="images/extensions/realsense_small.png" />
                         </a>
