Add Scratch3D extension to Library
Add the Scratch3D extension to the ScratchX Library page. Scratch3D uses the three.js JavaScript library to generate a 3D environment using Scratch blocks. The extension was developed by Stephen Lewis and John Goodwin.

--- a/index.html
+++ b/index.html
@@ -252,6 +252,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=http://scratch3d.github.io/Scratch3D_Beta/extension/ScratchThreeJS.js" data-action="load-url">
+                            <header>
+                                <h2>Scratch3D</h2>
+                                <p class="author">Stephen Lewis, John Goodwin</p>
+                            </header>
+                            <img src="images/extensions/scratch3d_small.jpg" />
+                        </a>
+                        <section class="description">
+                            <p>Fully 3D Environment</p>
+                            <a href="?url=http://scratch3d.github.io/EarthMoon.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://www.scratch3d.org" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/tone-synth.js" data-action="load-url">
                             <header>
                                 <h2>Sound Synthesizer</h2>
