Add rb4s extension to library page
rb4s is an extension created by @MrYsLab to control the SparkFun RedBot.
https://github.com/MrYsLab/rb4s/wiki

--- a/index.html
+++ b/index.html
@@ -235,6 +235,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=http://MrYsLab.github.io/rb4s/rb4s.js" data-action="load-url">
+                            <header>
+                                <h2>rb4s – A Controller For The RedBot</h2>
+                                <p class="author">Alan Yorinks</p>
+                            </header>
+                            <img src="images/extensions/rb4s_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control and Monitor a RedBot Robot</p>
+                            <a href="?url=http://MrYsLab.github.io/rb4s/quickTest.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://github.com/MrYsLab/rb4s/wiki">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://roamereducationalrobot.github.io/RoamerScratchX/roamer.js" data-action="load-url">
                             <header>
                                 <h2>Roamer</h2>
