Update Scratch3D image and example

--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
                                 <h2>Scratch3D</h2>
                                 <p class="author">Stephen Lewis, John Goodwin</p>
                             </header>
-                            <img src="images/extensions/scratch3d_small.jpg" />
+                            <img src="images/extensions/scratch3d_small.png" />
                         </a>
                         <section class="description">
                             <p>Fully 3D Environment</p>
-                            <a href="?url=http://scratch3d.github.io/EarthMoon.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://scratch3d.github.io/examples/tierOne/HelloWorld.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://www.scratch3d.org" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
