Update Roamer documentation link

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <section class="description">
                             <p>Programming Roamer&reg; with ScratchX</p>
                             <a href="?url=http://roamereducationalrobot.github.io/RoamerScratchX/The%20Scarlet%20Pumpernickel.sbx" data-action="load-url">Sample Project</a>
-                            <a href="http://training.roamer-educational-robot.com/course/view.php?id=55">Documentation</a>
+                            <a href="http://www.roamer-educational-robot.com/roamer-scratchx-training/">Documentation</a>
                         </section>
                         <section class="tags">
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
