Add EV3 extension to library
EV3+Scratch extension created by Ken Aspeslagh allows you to control the
LEGO EV3 brick with Scratch wirelessly over bluetooth.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,23 @@
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
+					<li>
+                        <a href="?url=http://kaspesla.github.io/ev3_scratch/ev3_scratch.js" data-action="load-url">
+                            <header>
+                                <h2>EV3+Scratch</h2>
+                                <p class="author">Ken Aspeslagh</p>
+                            </header>
+                            <img src="images/extensions/ev3_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control LEGO EV3 robots wirelessly</p>
+                            <a href="?url=http://kaspesla.github.io/ev3_scratch/examples/avoid%20obstacles%20example.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://kaspesla.github.io/ev3_scratch/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
                     <li>
                         <a href="?url=http://technoboy10.github.io/mesh/mesh.js" data-action="load-url">
                             <header>
